smaller scrollbar and prevent layout shift on section switch

--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,10 @@
 @import url('./variables.css');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp');
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	font-family: 'Lato', sans-serif;
 	background: var(--bg-primary);
@@ -12,4 +16,24 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	margin: 0;
+}
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
 }
